changes for new edition of book